docs: Add download instructions for large data files
- Exclude .parquet files from git (too large for GitHub)
- Add DOWNLOAD_DATA.md with download instructions
- Update README.md with data download section
- Keep small files (.pkl, .txt) in repository

Note: Users must download .parquet files separately (see DOWNLOAD_DATA.md)

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,13 @@ env/
 *.swp
 *.swo
 
-# Data files (raw only - processed files are included)
+# Data files - Large files excluded (use download link in README)
 data/raw/
+data/processed/*.parquet
+
+# Small preprocessed files are included
+!data/processed/splits/*.pkl
+!data/processed/splits/*.txt
 
 # Model files (trained models - not in pre-training phase)
 models/
